--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 </head>
 <body style="background-color:darkslateblue">
 	<h2>Testando Javascript</h2>
-	<script src="reverse.js"></script>
+	<script src="celsius_farenheit.js"></script>
 </body>
